The navigation links were added

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <nav>
             <div class="nav-row">
                  <ul class="main-nav">
-                     <li><a href="#">Home</a></li>
+                     <li><a href="https://cailenys.github.io/my-portfolio/">Home</a></li>
                      <li><a href="#my-portfolio">Portfolio</a></li>
                      <li><a href="#about-me">About me</a></li>
-                     <li><a href="#">Volunteer Work</a> </li>
+                     <li><a href="volunteer.html">Volunteer Work</a> </li>
                  </ul>
                  <a class="mobile-nav-icon"><i class="fas fa-bars"></i></a>
             </div> 
