--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-    <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
-    <link rel="stylesheet" href="">
+  
+    <link rel="stylesheet" type="text/css" href="resources/css/volunteer-queries.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
          
@@ -22,7 +22,7 @@
         <nav>
             <div class="nav-row">
                  <ul class="main-nav">
-                     <li><a href="https://cailenys.github.io/my-portfolio/">Home</a></li>
+                    <li><a href="#">Home</a></li>
                      <li><a href="#my-portfolio">Portfolio</a></li>
                      <li><a href="#about-me">About me</a></li>
                      <li><a href="volunteer.html">Volunteer Work</a> </li>
@@ -70,7 +70,7 @@
                     <i class="fas fa-heart icon-key"></i>
                     <h2> Volunteer work </h2>
                     <div class="volunteer"> 
-                        <a href="#"><img src="resources/css/img/volunteer2.png" alt="Cailenys' voluteer work"></a> 
+                        <a href="volunteer.html"><img src="resources/css/img/volunteer2.png" alt="Cailenys' voluteer work"></a> 
                     </div>
                     
                 </div>        
