--- a/volunteer.html
+++ b/volunteer.html
@@ -44,7 +44,7 @@
                 <Blockquote>If what I do at work is good for my community, then I am in the right place.</Blockquote>
                 <cite>Cailenys Salazar</cite>
             </div>
-            <div>
+            <div class="row">
                  <p>
                    I discovered my love working with kids teaching at summer camps back in Venezuela at the age of 16. Children are loving, innocent, brave and always curious. Having an abundance of curiosity is a great quality and perfect to start to learning STEAM (science, technology, engineering, art and maths )!
                  </p>
