--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="portfolio-list">
                         <ul class="portfolio">
                             <li><a href="https://cailenys.github.io/DryPod-website/">CSS & HTML</a></li>
-                            <li><a href="https://github.com/Cailenys/podcasts-for-programmers-project">PHP</a></li>
+                            <li><a href="https://github.com/Cailenys/podcasts-for-programmers-project">PHP & JS</a></li>
                             <li><a href="https://www.instagram.com/mydrypod/?hl=es">Instagram</a></li>
                             <li><a href="https://www.youtube.com/channel/UCUm2WYTqP9GNcubRmNFr9Tw?view_as=subscriber">YouTube</a></li>
                         </ul>
