--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <ul class="portfolio">
                             <li><a href="https://cailenys.github.io/DryPod-website/">CSS & HTML</a></li>
                             <li><a href="https://github.com/Cailenys/podcasts-for-programmers-project">PHP & JS</a></li>
+                            <li><a href="https://drypod.ca/">WordPress</a></li>
                             <li><a href="https://www.instagram.com/mydrypod/?hl=es">Instagram</a></li>
                             <li><a href="https://www.youtube.com/channel/UCUm2WYTqP9GNcubRmNFr9Tw?view_as=subscriber">YouTube</a></li>
                         </ul>
