--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="author" content="Cailenys Salazar">
     
-    <title>Cailenes' portfolio</title>
+    <title>Cailenys' portfolio</title>
 </head>
     <body>
         <nav>
