Margin-left on my work image changed to 80px

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section class="my-work" id="my-portfolio">
             <h1> Portfolio</h1>
             <div class="row">
-                <div class= "col span-1-of-3 box">
+                <div class= "col span-1-of-3 box portfolio-section">
                     <i class="fas fa-briefcase icon-key"></i>
                     <h2> My work </h2>
                     <div class="portfolio-list">
