The social media links were added

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 </div>
                 <div class="col footer-text span-1-of-2 social-icon">
                     <ul class="social-icons">
-                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin-in"></i></i></a></li>                        
+                        <li><a href="https://www.instagram.com/cailenyssalazar/?hl=en"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/cailenyssalazar/"><i class="fab fa-linkedin-in"></i></i></a></li>                        
                     </ul>
                 </div>
             </div>
