Mobile navigation added to volunteer page

--- a/volunteer.html
+++ b/volunteer.html
@@ -17,25 +17,23 @@
     <title>Document</title>
 </head>
     <body>
-        <nav>
-            <div class="nav-row">
-                 <ul class="main-nav">
-                    <li><a href="index.html">Home</a></li>
-                     <li><a href="index.html#my-portfolio">Portfolio</a></li>
-                     <li><a href="index.html#about-me">About me</a></li>
-                     <li><a href="#">Volunteer Work</a> </li>
-                 </ul>
-                 <a class="mobile-nav-icon"><i class="fas fa-bars"></i></a>
-            </div> 
-        </nav>
-
         <header>
+            <nav>
+                <div class="nav-row">
+                     <ul class="main-nav js--main-nav">
+                        <li><a href="index.html">Home</a></li>
+                         <li><a href="index.html">Portfolio</a></li>
+                         <li><a href="index.html">About me</a></li>
+                         <li><a href="volunteer.html">Volunteer Work</a> </li>
+                     </ul>
+                     <a class="mobile-nav-icon js--nav-icon"><i class="fas fa-bars"></i></a>
+                </div> 
+            </nav>
             <div class="header-text-box">
                 <h1>Volunteer Work</h1>
             </div>
         </header>
-
-        
+             
    
         <!-- Section 1 - My work -->
 
@@ -121,5 +119,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/792d72ca72.js" crossorigin="anonymous"></script>
         <script src="vendors/js/jquery.waypoints.min.js"></script>
+        <script src="resources/js/script.js"></script>
     </body>
 </html>
