Python project was added to my-work section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                                 <li><a href="https://cailenys.github.io/DryPod-website/">CSS & HTML</a></li>
                                 <li><a href="https://github.com/Cailenys/podcasts-for-programmers-project">PHP & JS</a></li>
                                 <li><a href="https://drypod.ca/">WordPress</a></li>
+                                <li><a href="https://github.com/Cailenys/python-ecommerce-website">Python</a></li>
                                 <li><a href="https://rise.articulate.com/share/pZqbVVmD1OmHqeXXcHZWArzmDuYz3Zvy#/">Articulate 360</a></li>
                                 <li><a href="https://www.instagram.com/mydrypod/?hl=es">Instagram</a></li>
                                 <li><a href="https://www.youtube.com/channel/UCUm2WYTqP9GNcubRmNFr9Tw?view_as=subscriber">YouTube</a></li>
@@ -73,8 +74,7 @@
                     <h2> Volunteer work </h2>
                     <div class="volunteer"> 
                         <a href="volunteer.html"><img src="resources/css/img/volunteer2.png" alt="Cailenys' voluteer work"></a> 
-                    </div>
-                    
+                    </div> 
                 </div>        
             </div>
         </section>
