--- a/index.html
+++ b/index.html
@@ -68,8 +68,13 @@
                         <p>
                             Dedicated, international IT professional and electronics engineer with 8 years of diverse technology development and mentoring experience.
                         </p>
+                        <div class="nav-row">
+                            <div class="header-text-box-2">
+                                <a class= "button button-header" href="https://cailenys.github.io/online-resume/">Resume</a>
+                            </div>
+                        </div>
                 </div>
-                <div class= "col span-1-of-3 my-work-box">
+                <div class= "col span-1-of-3 my-work-box volunteer-icon">
                     <i class="fas fa-heart icon-my-work"></i>
                     <h2> Volunteer work </h2>
                     <div class="volunteer"> 
