--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                                 <li><a href="https://drypod.ca/">WordPress</a></li>
                                 <li><a href="https://github.com/Cailenys/python-ecommerce-website">Python</a></li>
                                 <li><a href="https://rise.articulate.com/share/pZqbVVmD1OmHqeXXcHZWArzmDuYz3Zvy#/">Articulate 360</a></li>
-                                <li><a href="https://www.instagram.com/mydrypod/?hl=es">Instagram</a></li>
-                                <li><a href="https://www.youtube.com/channel/UCUm2WYTqP9GNcubRmNFr9Tw?view_as=subscriber">YouTube</a></li>
+                                <li><a href="https://www.instagram.com/mydrypod/?hl=es">Photography</a></li>
+                                <li><a href="https://www.youtube.com/channel/UCUm2WYTqP9GNcubRmNFr9Tw?view_as=subscriber">Editing</a></li>
                             </ul>
                         </div>
                     </div>                
