The picture on the volunteer work section has changed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <i class="fas fa-user-graduate icon-my-work"></i>
                     <h2> About me </h2>
                         <p>
-                            Dedicated, international IT professional and electronics engineer with 8 years of diverse technology development and mentoring experience.
+                            Dedicated international IT professional with experience working in industrial environments. Strong background in troubleshooting and mentoring, using a broad range of technologies.
                         </p>
                         <div class="nav-row">
                             <div class="header-text-box-2">
@@ -78,7 +78,7 @@
                     <i class="fas fa-heart icon-my-work"></i>
                     <h2> Volunteer work </h2>
                     <div class="volunteer"> 
-                        <a href="volunteer.html"><img src="resources/css/img/volunteer2.png" alt="Cailenys' voluteer work"></a> 
+                        <a href="volunteer.html"><img src="resources/css/img/disney2.jpg" alt="Cailenys' voluteer work"></a> 
                     </div> 
                 </div>        
             </div>
